@@ -52,7 +52,8 @@ interface of LinuxSampler Control Protocol (LSCP) (http://www.linuxsampler.org).
 %dir %{_datadir}/icons/hicolor/scalable
 %dir %{_datadir}/icons/hicolor/scalable/apps
 %dir %{_datadir}/icons/hicolor/scalable/mimetypes
-#dir %{_datadir}/locale
+#dir %{_datadir}/%{name}
+#dir %{_datadir}/%{name}/translations
 %{_bindir}/%{name}
 %{_datadir}/mime/packages/%{name}.xml
 %{_datadir}/applications/%{name}.desktop
@@ -60,7 +61,7 @@ interface of LinuxSampler Control Protocol (LSCP) (http://www.linuxsampler.org).
 %{_datadir}/icons/hicolor/32x32/mimetypes/application-x-%{name}*.png
 %{_datadir}/icons/hicolor/scalable/apps/%{name}.svg
 %{_datadir}/icons/hicolor/scalable/mimetypes/application-x-%{name}*.svg
-%{_datadir}/locale/%{name}_*.qm
+%{_datadir}/%{name}/translations/%{name}_*.qm
 
 %changelog
 * Tue Dec 31 2013 Rui Nuno Capela <rncbc@rncbc.org> 0.2.3
