@@ -81,14 +81,9 @@ unix {
 	}
 
 	BINDIR = $${PREFIX}/bin
-	DATADIR = $${PREFIX}/share
-	LOCALEDIR = $(localedir)
+	DATADIR = $$PREFIX/share
 
 	DEFINES += DATADIR=\"$${DATADIR}\"
-
-	!isEmpty(LOCALEDIR) {
-		DEFINES += LOCALEDIR=\"$${LOCALEDIR}\"
-	}
 
 	# make install
 	INSTALLS += target desktop icon \
